more adjustment and update code in documentation page

--- a/SynchroWebpage/documentation.html
+++ b/SynchroWebpage/documentation.html
@@ -97,12 +97,12 @@
     <h1>Code</h1>
     <div class="code-box" id="codeBox">
       <pre><code>
-#include TFT_eSPI.h
-#include SPI.h
-#include WiFi.h
-#include ESPmDNS.h
-#include SD.h>
-#include esp_heap_caps.h
+#include <TFT_eSPI.h>
+#include <SPI.h>
+#include <WiFi.h>
+#include <ESPmDNS.h>
+#include <SD.h>
+#include <esp_heap_caps.h>
 
 TFT_eSPI tft = TFT_eSPI();
 TFT_eSprite spr = TFT_eSprite(&tft);
@@ -131,7 +131,7 @@ SPIClass spiSD(HSPI);
 #define SCROLL_WINDOW 2000
 #define SCROLL_OFFSET 100
 #define FLICKER_INTERVAL 1000
-#define WIFI_CHECK_INTERVAL 25000
+#define WIFI_CHECK_INTERVAL 100000
 #define HIT_WINDOW 400
 #define TILE_EXPIRE_TIME 1500
 #define MAX_TILES 200
@@ -419,6 +419,38 @@ void drawCountdownScreen(int secondsLeft) {
   int textWidth = countText.length() * 48;
   spr.setCursor((SCREEN_W - textWidth) / 2, 150);
   spr.print(countText);
+  spr.pushSprite(0, 0);
+}
+
+void drawWiFiScreen(bool connecting) {
+  spr.fillSprite(fixColor(TFT_BLACK));
+
+  // Draw title "Synchro" with shadow effect
+  spr.setTextSize(4);
+  spr.setTextColor(fixColor(TFT_MAGENTA));
+  spr.setCursor(42, 53);
+  spr.print("Synchro");
+  spr.setTextColor(fixColor(TFT_WHITE));
+  spr.setCursor(40, 50);
+  spr.print("Synchro");
+
+  // Draw WiFi status text
+  spr.setTextSize(2);
+  spr.setTextColor(fixColor(TFT_WHITE));
+  if (connecting) {
+    spr.setCursor(15, 200);
+    spr.print("Connecting WiFi");
+    // Add dots animation
+    int dots = (millis() / 500) % 4;
+    spr.setCursor(195, 200);
+    for (int i = 0; i < dots; i++) {
+      spr.print(".");
+    }
+  } else {
+    spr.setCursor(35, 200);
+    spr.print("WiFi Connected!");
+  }
+
   spr.pushSprite(0, 0);
 }
 
@@ -769,6 +801,7 @@ void handleUpload(WiFiClient& client) {
   }
 
   if (bufferIndex > 0) f.write(buffer, bufferIndex);
+  f.flush();  
   f.close();
 
   client.println("HTTP/1.1 200 OK");
@@ -880,14 +913,6 @@ bool checkAnyButtonPressed() {
   return false;
 }
 
-bool checkSceneChange() {
-  bool b0 = (digitalRead(buttonPins[0]) == HIGH);
-  bool b1 = (digitalRead(buttonPins[1]) == HIGH);
-  bool b2 = (digitalRead(buttonPins[2]) == HIGH);
-  bool b3 = (digitalRead(buttonPins[3]) == HIGH);
-  return b0 && b1 && b2 && b3;
-}
-
 ///////////////////// Result /////////////////////
 
 void resetScore() { miss = ok = great = perfect = 0; }
@@ -915,30 +940,50 @@ void initDisplay() {
 }
 
 void initWiFi() {
-  // simple splash
-  spr.fillSprite(fixColor(TFT_BLACK));
-  spr.setTextSize(4);
-  spr.setTextColor(fixColor(TFT_WHITE));
-  spr.setCursor(50, 110); spr.print("WiFi...");
-  spr.pushSprite(0, 0);
-
+  drawWiFiScreen(true);
+  
   WiFi.begin(ssid, password);
-  unsigned long t0 = millis();
+  Serial.print("Connecting to WiFi");
+  
+  unsigned long wifiStartTime = millis();
   while (WiFi.status() != WL_CONNECTED) {
     delay(500);
-    if (millis() - t0 > 30000) {
+    Serial.print(".");
+    
+    drawWiFiScreen(true);
+    
+    if (millis() - wifiStartTime > 30000) {
+      Serial.println("\nWiFi connection timeout!");
       spr.fillSprite(fixColor(TFT_BLACK));
       spr.setTextSize(2);
       spr.setTextColor(fixColor(TFT_RED));
-      spr.setCursor(20, 120); spr.print("WiFi Failed!");
+      spr.setCursor(20, 120);
+      spr.print("WiFi Failed!");
       spr.pushSprite(0, 0);
-      delay(1200);
+      delay(3000);
       return;
     }
   }
+  
+  Serial.println();
+  Serial.print("Connected. IP: ");
+  Serial.println(WiFi.localIP());
+
+  drawWiFiScreen(false);
+  delay(1000);
 
   server.begin();
-  if (!MDNS.begin("synchro")) { /* ignore */ }
+  Serial.println("Server started.");
+  Serial.print("Listening on: http://");
+  Serial.print(WiFi.localIP());
+  Serial.println(":80");
+
+  if (MDNS.begin("synchro")) {
+    Serial.println("mDNS responder started!");
+    Serial.println("Access at: http://synchro.local/handshake");
+  } else {
+    Serial.println("Error starting mDNS");
+  }
 }
 
 void setup() {
@@ -988,21 +1033,8 @@ void updateGamePlay() {
   unsigned long now = millis();
   int currentTime = now - startTime;
 
-  if (checkSceneChange()) {
-    state = 0;
-    drawMainScreen();
-    setGameResult(currentSongName, currentArtist, currentDifficulty, miss, ok, great, perfect);
-    gameEnded = true;
-    delay(200);
-    return;
-  }
-
-  bool b0 = (digitalRead(buttonPins[0]) == HIGH);
-  bool b1 = (digitalRead(buttonPins[1]) == HIGH);
-  bool b2 = (digitalRead(buttonPins[2]) == HIGH);
-  bool b3 = (digitalRead(buttonPins[3]) == HIGH);
-  if (!(b0 && b1 && b2 && b3)) {
-    for (int i = 0; i < NUM_LANES; i++) checkButtonPress(i, currentTime);
+  for (int i = 0; i < NUM_LANES; i++) {
+    checkButtonPress(i, currentTime);
   }
 
   cleanupExpiredTiles(currentTime);
@@ -1041,6 +1073,7 @@ void loop() {
   else if (state == 2) updateGamePlay();
   else if (state == 3) updateResults();
 }
+
       </code></pre>
     </div>
     <button id="toggleCode">See More</button>
