--- a/SynchroWebpage/documentation.html
+++ b/SynchroWebpage/documentation.html
@@ -97,12 +97,12 @@
     <h1>Code</h1>
     <div class="code-box" id="codeBox">
       <pre><code>
-#include <TFT_eSPI.h>
-#include <SPI.h>
-#include <WiFi.h>
-#include <ESPmDNS.h>
-#include <SD.h>
-#include <esp_heap_caps.h>
+#include &lt;TFT_eSPI.h&gt;
+#include &lt;SPI.h&gt;
+#include &lt;WiFi.h&gt;
+#include &lt;ESPmDNS.h&gt;
+#include &lt;SD.h&gt;
+#include &lt;esp_heap_caps.h&gt;
 
 TFT_eSPI tft = TFT_eSPI();
 TFT_eSprite spr = TFT_eSprite(&tft);
