--- a/SynchroWebpage/documentation.html
+++ b/SynchroWebpage/documentation.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Documents </title>
+  <title>Synchro | Documentation </title>
 
   <!-- ฟอนต์ -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -1114,19 +1114,19 @@ void loop() {
       <img src="/Synchro/SynchroWebpage/assets/Img/tawan.jpg" alt="pic1">
       <h3>นายธนัทภัทร พรหมทอง</h3>
       <p>67070069</p>
-      <p>Arduino/Web backend</p>
+      <p>Micro Controller/Web Backend/Video Editing</p>
     </div>
     <div class="card reveal">
       <img src="/Synchro/SynchroWebpage/assets/Img/nana.png" alt="pic2">
       <h3>นางสาวพิชฎา แก้วศิริ</h3>
       <p>67070117</p>
-      <p>Web Frontend/Poster</p>
+      <p>Web Frontend/Poster/Product Container</p>
     </div>
     <div class="card reveal">
       <img src="/Synchro/SynchroWebpage/assets/Img/puri.jpg" alt="pic3">
       <h3>นายภูริ ประชาสุขสิน</h3>
       <p>67070137</p>
-      <p>Arduino/Web backend</p>
+      <p>Micro Controller/Web backend</p>
     </div>
     <div class="card reveal">
       <img src="/Synchro/SynchroWebpage/assets/Img/mina.png" alt="pic4">
@@ -1141,7 +1141,7 @@ void loop() {
     <a href="https://github.com/GANKSTERPHY/Synchro.git" target="_blank" rel="noopener" class="footer-btn github-btn">
       GitHub
     </a>
-    <a href="https://drive.google.com/file/d/177kQ-zP-80Jn6qxhN4f8kYqUl05QCxFu/view?usp=sharing" target="_blank" rel="noopener" class="footer-btn poster-btn">
+    <a href="https://drive.google.com/file/d/1AGAdBhnzUSojLQNEYzJJM2TJLPkZgHYF/view?usp=sharing" target="_blank" rel="noopener" class="footer-btn poster-btn">
       Poster
     </a>
   </div>
