--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Synchrom</title>
+    <title>Synchro | Main</title>
     <link rel="stylesheet" href="SynchroWebpage/style.css">
     <link rel="icon" href="SynchroWebpage/assets/icon.png">
 </head>
