--- a/SynchroWebpage/documentation.html
+++ b/SynchroWebpage/documentation.html
@@ -1080,14 +1080,25 @@ void loop() {
   </div>
 
   <div class="right-panel">
-    <h1>Youtube link</h1>
-    <div class="video-container">
-      <iframe width="100%" height="315" 
-        src="https://youtu.be/TF4fjew09xc"title="Dept - ยังมีหน้ากลับมา? | How Dare You? [Music Video]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen> 
-        title="YouTube video player" frameborder="0" 
-        allowfullscreen></iframe>
-    </div>
+  <h1>Youtube link</h1>
+
+  <div class="video-container">
+    <a
+      class="video-link"
+      href="https://youtu.be/TF4fjew09xc"
+      target="_blank"
+      rel="noopener"
+      aria-label="เปิดวิดีโอใน YouTube"
+    >
+      <img
+        src="/Synchro/SynchroWebpage/syncover.png"
+        alt="Synchro youtube"
+        loading="lazy"
+      />
+    </a>
   </div>
+</div>
+
 </div>
   <div class="content reveal">
     <h1>What Different from normal rhythm game ?</h1>
